--- a/party_sub/res/layout/activity_main.xml
+++ b/party_sub/res/layout/activity_main.xml
@@ -17,14 +17,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="add" />
+            android:text="계정 추가" />
 
         <Button
             android:id="@+id/del"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="del" />
+            android:text="로그 아웃" />
     </LinearLayout>
 
     <ListView
